# Main-Projects-repsitory

Biostatistics project using R langauge/: BioStat Project.R  Notes.txt  Project B.docx  documentation point 6.docx  lead.RData
Car license detector ( image prossesing ) - using python language/: Project Code(HTML).html  Project_Code(IPYNB).ipynb
DICOM Viewer Project - medical image informatics field/: project using GUI ( CTtkinter ).ipynb  project without GUI.ipynb
Drug design project - using Pymol/: CASE STUDY ONE.docx  Output from 1 to 12.csv  Output from 12 to 24.csv  Output from to 25 to 40.csv
Exams automated scheduling project - C++ (  data structure & files handling  )/CS 479 FINAL PROJECT/: CMakeLists.txt  CONTAINER.txt  CS 479 FINAL PROJECT.depend  Exams data arrange.txt  Exams data.txt  Students data arrange.txt  Students data.txt
Exams automated scheduling project - using  C  language/: CSCI479_Final_Project_Report_1_2.docx
Exams automated scheduling project - using  C  language/CS 479 FINAL PROJECT/: CS 479 FINAL PROJECT.cbp  CS 479 FINAL PROJECT.layout  main.c
predicting match results using neural networks & machine learning methods  - using python language/: New Microsoft Word Document.docx  data viewing.ipynb  master.ipynb
