# cmake_minimum_required(VERSION <specify CMake version here>)
project(CS_479_FINAL_PROJECT)

set(CMAKE_CXX_STANDARD 14)

add_executable(CS_479_FINAL_PROJECT
        "CS 479 FINAL PROJECT.cbp"
        "CS 479 FINAL PROJECT.layout"
        "MAIN CODE.c"
        "MAIN CODE.exe"
        "MAIN CODE.o")
